--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,18 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'com.unboundid:unboundid-ldapsdk'
+
+	/*** ldap dependencies ***/
+	implementation("org.springframework.boot:spring-boot-starter-security")
+	implementation("org.springframework.security:spring-security-ldap")
+	implementation("org.springframework.ldap:spring-ldap-core")
+	implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
+	implementation("com.unboundid:unboundid-ldapsdk")
 }
 
 test {
