--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.servlet.contextPath=/v1
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
+spring.datasource.password=sa
+spring.datasource.username=sa
+spring.datasource.url=jdbc:h2:file:/data/demo
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
