--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
 spring.datasource.password=sa
 spring.datasource.username=sa
-spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.url=jdbc:h2:mem:mydb
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
