--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation group: 'org.passay', name: 'passay', version: '1.0'
+	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+
+
+
+
 	/*** ldap dependencies ***/
 	implementation("org.springframework.boot:spring-boot-starter-security")
 	implementation("org.springframework.security:spring-security-ldap")
