Set Session Management in Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.servlet.contextPath=/v1
+server.servlet.session.timeout=15m
+server.servlet.session.cookie.http-only=true
+# server.servlet.session.cookie.secure=true # if TLS is in play
+server.servlet.session.cookie.secure=false
+server.servlet.session.tracking-modes=COOKIE
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
